# cpp-bootstrap

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.html  Readme.md  howie-makefile
.github/workflows/: branch-build.yml  build-docs.yml  build-with-container.yml  build.yml  deploy-gh-pages.yml
admin/cmake/: buildinfodefs.cmake  coverage.cmake  gen.cmake  version-vars.cmake
admin/conan/: registry-aws-arty.properties  registry-conancenter.properties
admin/containers/: containers.mak
admin/scripts/: Readme.adoc  access-sgn-container.bash  clean-exit.bash  conan-registry-login.bash  conan-registry-logout.bash  conan-registry-setup.bash  conan-registry-status.bash  container-build.bash  container-registry-logout.bash  container-registry-status.bash  devenv.bash  docs-publish.bash  fix-stubs.bash  jx-pipeline-effective.bash  lib-conan-registry.bash  lib-container-registry.bash  lib-repo.bash  login-arty.bash  login-poetry.bash  login-status.bash  logout-arty.bash  logout-poetry.bash  registry-login.bash  registry-status.bash  start-bld-container.bash
admin/submakes/: conan-registry.mak  conan.mak  conan.mak.org  container-names-gcc14.mak  container-names-sphinx.mak  cpp-code-coverage.mak  cpp-coverage.mak  cpp-static-analysis.mak  cpp-unit-test.mak  cpp.mak  cpp.mak.org  docs-code-coverage.mak  docs-coverage.mak  docs-publish.mak  docs-sphinx.mak  docs-static-analysis.mak  hack-sh.mak  registry-login.mak  start-cpp-bld-container.mak  unit-test-cpp.mak
docs/: Readme.md  docs.mak
docs/site/: Readme.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/src/: conf.py  index.rst
lib-codec/src/: CodecSlow.cpp
lib-codec/utest/: EnumChannelDirectionTest.cpp
lib-gen/utest/: StringUtilsTest.cpp  utest-lib-gen.cpp
main/: CMakeLists.txt
main/utest/: CMakeLists.txt
src/: CMakeLists.txt
src/lib-codec/: CMakeLists.txt
src/lib-codec/include/lib-codec/: CodecFast.h
src/lib-codec/src/: CodecFast.cpp  EnumChannelDirection.cpp
src/lib-codec/utest/: CMakeLists.txt  CodecFastTest.cpp  CodecSlowTest.cpp  utest-lib-codec.cpp
src/lib-gen/: CMakeLists.txt
src/lib-gen/utest/: BuildInfoTest.cpp  CMakeLists.txt
src/main/: CMakeLists.txt
tools/cmake/: buildinfodefs.cmake
tools/conan/: conanfile.py
tools/containers/: containers.mak
(+244 files in other folders)
